oc/nginx/uat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: steerlinx-uat
  name: 'nginx'
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
            defaultMode: 420
      containers:
        - name: nginx
          image: 'harbor.digilab.ocpgroup.ma/devops/nginx-unprivileged:mainline-alpine'
          ports:
            - containerPort: 8090
              protocol: TCP
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
