oc/nginx/uat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: steerlinx-uat
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
