oc/nginx/uat/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx
  namespace: steerlinx-uat
spec:
  host: steerlinx-uat.apps.techlab.ocpgroup.ma
  to:
    kind: Service
    name: nginx
    weight: 100
  port:
    targetPort: 8090
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
